Bug 42784 - Assertion failure in Connection::readEventHandler when WebKitTestRunner exits
Summary: Assertion failure in Connection::readEventHandler when WebKitTestRunner exits
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: New Bugs (show other bugs)
Version: 528+ (Nightly build)
Hardware: PC Windows XP
: P2 Normal
Assignee: Adam Roben (:aroben)
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-07-21 13:51 PDT by Adam Roben (:aroben)
Modified: 2010-07-21 13:56 PDT (History)
1 user (show)

See Also:


Attachments
Patch (1.96 KB, patch)
2010-07-21 13:52 PDT, Adam Roben (:aroben)
andersca: review+
Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Adam Roben (:aroben) 2010-07-21 13:51:35 PDT
Assertion failure in Connection::readEventHandler when WebKitTestRunner exits
Comment 1 Adam Roben (:aroben) 2010-07-21 13:52:08 PDT
Created attachment 62226 [details]
Patch
Comment 2 Adam Roben (:aroben) 2010-07-21 13:56:44 PDT
Committed r63855: <http://trac.webkit.org/changeset/63855>