Handle broken pipes in more places in CoreIPC

Fixes <http://webkit.org/b/42784> Assertion failure in
Connection::readEventHandler when WebKitTestRunner exits

Reviewed by Anders Carlsson.

* Platform/CoreIPC/win/ConnectionWin.cpp:
(CoreIPC::Connection::readEventHandler): Check for a broken pipe
whenever we call ::PeekNamedPipe.

Canonical link: https://commits.webkit.org/54692@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@63855 268f45cc-cd09-0410-ab3c-d52691b4dbfc